# motion-contrastive-sgg

./: README.md  pyproject.toml
configs/: openpvsg.yaml  psg4d_pointcloud.yaml  psg4d_rgbd.yaml  synthetic.yaml
scripts/: download_openpvsg.py  download_psg4d.py  evaluate.py  prepare_openpvsg.py  prepare_psg4d.py  run_synthetic_debug.py  train.py
src/motion_aware_tpsgg/: __init__.py
src/motion_aware_tpsgg/datasets/: __init__.py  base.py  openpvsg.py  psg4d.py  synthetic.py
src/motion_aware_tpsgg/evaluation/: __init__.py
src/motion_aware_tpsgg/losses/: __init__.py
src/motion_aware_tpsgg/metrics/: __init__.py
src/motion_aware_tpsgg/models/: __init__.py  segmentation.py
src/motion_aware_tpsgg/sampling/: __init__.py
src/motion_aware_tpsgg/training/: __init__.py
src/motion_aware_tpsgg/transport/: __init__.py
src/motion_aware_tpsgg/utils/: __init__.py
tests/: test_all.py
