[project]
name = "motion-aware-tpsgg"
version = "0.1.0"
description = "Motion-aware Contrastive Learning for Temporal Panoptic Scene Graph Generation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Research Code Reconstruction"},
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "opencv-python>=4.7.0",
    "Pillow>=9.4.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "einops>=0.6.0",
    "scikit-learn>=1.2.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.15.0"]
segmentation = [
    "detectron2",
    "mmcv",
    "mmdet",
    "mmseg",
]
pointcloud = [
    "open3d>=0.17.0",
]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
